<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailsActivity">

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/sansita_bold"
        android:padding="16dp"
        android:text="@string/food" />

    <View
        android:id="@+id/view_name"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/text_name"
        android:background="#818181" />

    <TextView
        android:id="@+id/text_portion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_name"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/sansita_bold"
        android:padding="16dp"
        android:text="@string/portion_size" />

    <TextView
        android:id="@+id/text_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_name"
        android:layout_toStartOf="@id/text_unity"
        android:padding="16dp"
        android:text="@string/text_quantity" />

    <TextView
        android:id="@+id/text_unity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_name"
        android:layout_alignParentEnd="true"
        android:padding="16dp"
        android:text="@string/unity" />


    <View
        android:id="@+id/view_quantity"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/text_portion"
        android:background="#818181" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sansita_bold"
        android:layout_below="@+id/view_quantity"
        android:padding="16dp"
        android:text="@string/calories" />


    <TextView
        android:id="@+id/text_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_quantity"
        android:layout_alignParentEnd="true"
        android:padding="16dp"
        android:text="@string/ninety" />

    <View
        android:id="@+id/view_calories"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/text_calories"
        android:background="#818181" />

    <TextView
        android:id="@+id/text_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_calories"
        android:fontFamily="@font/sansita_bold"
        android:padding="16dp"
        android:text="@string/info" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_information"
        android:paddingStart="16dp"
        android:text="@string/text_info" />


</RelativeLayout>